Fix overflow issue with article latest

--- a/source/_patterns/02-organisms/articles-latest/_articles-latest.scss
+++ b/source/_patterns/02-organisms/articles-latest/_articles-latest.scss
@@ -47,8 +47,6 @@
 
   // <ul>
   &__list {
-    margin: 0 #{- $general-h-spacing};
-
     .qh__teaser-article {
       padding-right: $general-h-spacing * 2;
     }
